# member-directory-app

./: .gitignore  README.md  pyproject.toml
app/: demo.py  streamlit_app.py
data/: members.csv
src/member_directory_app/: __init__.py  __main__.py  cli.py
