[project]
name = "member-directory-app"
version = "0.1.0"
description = "Streamlit-based member directory app using Google Sheets"
authors = [{ name = "Tiana Smith" }]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31",
    "pandas",
    "gspread",
    "google-auth",
]

[project.scripts]
member-dir = "member_directory_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Optional: future settings go here
